# recipeboxauth

./: db.sqlite3  pyproject.toml
homepage/: forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_author_favorites.py
recipe_box/: settings.py  urls.py
recipebox/: settings.py  urls.py
recipebox.egg-info/: PKG-INFO
templates/: addFavorite.html  added.html  addrecipe.html  author_detail.html  index.html  post_detail.html  recipe_and_author_forms.html  recipe_detail.html  recipe_list.html  signup.html
