[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = "A Recipe Box Django app"
authors = ["Howard"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
